cloud-deploy/nginx-ingress.yaml
# Authors of code:
# - Carl-Johan Erikson, Viktor Kolak

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600" 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 8080
      - path: /users/
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 8000
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: prediction-service
            port:
              number: 8000
      - path: /admins/
        pathType: Prefix
        backend:
          service:
            name: training-service
            port:
              number: 8000
